Added shuffleTest, drawCardTest, printHandTest and printHand. Driver: Martin. Navigator: Eric.